# lastlayer

./: Cargo.toml  README.md  build.rs
examples/: adder.rs  relu.rs
examples/adder/: adder.py  adder_dpi.v  device.py  test.py
examples/relu/: Makefile  device.py  relu.py  relu_dpi.v  test.py
examples/relu/chisel/src/main/scala/relu/: Relu.scala
examples/relu/dpi/: relu_dpi_1.v  relu_dpi_128.v  relu_dpi_16.v  relu_dpi_2.v  relu_dpi_32.v  relu_dpi_4.v  relu_dpi_64.v  relu_dpi_8.v
include/lastlayer/: lastlayer.h
numpy/: Makefile  adder.py  adder.v  adder_dpi.v  device.py
pytorch/: Makefile  device.py  relu.cc  relu.py  relu.v  relu_dpi.v
pytorch/chisel/src/main/scala/relu/: Relu.scala
src/: awig.rs  lib.rs  main.rs  util.rs  verilator.rs
src/handlebars/: lastlayer.cc.hbs  lastlayer.v.hbs  virtual_top.cc.hbs
verilog/: test.v
