[package]
name = "lastlayer"
version = "0.1.0"
authors = ["Luis Vega <vegaluis@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "2.0.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.5"

[build-dependencies]
os_info = "1.2.0"
